# dbus-autoterm

./: .envrc  .gitignore  AGENTS.md  Makefile  README.md  devbox.json
dbus-autoterm/: README.md  app.py  config.sample.ini  custom-gui-install.sh  custom-gui-uninstall.sh  disable.sh  domain.py  enable.sh  gx_dbus.py  install.sh  native-gui-install.sh  native-gui-uninstall.sh  protocol.py  provider.py  pyproject.toml  restart.sh  room_sensor.py  transports.py  uninstall.sh
dbus-autoterm/native-gui/Victron/VenusOS/components/: SwipePageModel.qml
dbus-autoterm/native-gui/Victron/VenusOS/pages/: HeaterPage.qml
dbus-autoterm/qml/gui-v2/common/pages/settings/devicelist/delegates/: DeviceListDelegate_heater.qml
dbus-autoterm/qml/gui-v2/common/pages/settings/devicelist/heater/: PageHeater.qml  PageHeaterDiagnostics.qml  PageHeaterLiveData.qml  PageHeaterRoomSensor.qml  PageHeaterSettings.qml  PageHeaterTimer.qml  PageHeaterTimers.qml
dbus-autoterm/service/: run
dbus-autoterm/service/log/: run
dbus-autoterm/tests/: test_app.py  test_driver.py  test_room_sensor.py  test_serial_provider.py
docs/: heater-quick-page-ux.md  heater-ui-ux.md  implementation.md  protocol-differences.md  protocol.md
emulation/: controller.py  domain.py  emulator.py  heater.py  protocol.py  pyproject.toml  runtime.py
emulation/tests/: test_emulator.py  test_protocol.py
scripts/: deploy-dbus-autoterm.sh  package-dbus-autoterm.sh
