[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dbus-autoterm"
version = "0.1.0"
description = "dbus-autoterm"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
serial = ["pyserial>=3.5"]

[project.scripts]
dbus-autoterm = "app:main"

[tool.setuptools]
py-modules = ["app", "controller", "domain", "gx_dbus", "protocol", "provider", "room_sensor", "transports"]
