[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoterm-emulation"
version = "0.1.0"
description = "Autoterm heater emulation"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
serial = ["pyserial>=3.5"]

[tool.setuptools]
py-modules = ["controller", "domain", "emulator", "protocol", "transports"]
